--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -604,22 +605,22 @@
               <div class="card-meta">Residence Inn Calgary Downtown · 2023–Present</div>
             </div>
             <ul class="bullet-list card-body">
-              <li>Served as first point of contact for guest issues.</li>
-              <li>Coordinated with front desk & departments.</li>
-              <li>Maintained organized workspaces & processes.</li>
+              <li>Acted as the first point of contact for guests, providing warm welcomes and promptly resolving inquiries and concerns.</li>
+              <li>Coordinated seamlessly with the front desk and other departments to ensure a seemless and positive guest experience.</li>
+              <li>Maintained a clean and organized environment, ensuring a welcoming and welcoming atmosphere.</li>
             </ul>
           </div>
 
           <div class="card">
             <div class="card-header">
-              <div class="card-title">Houseperson / Operations Support</div>
-              <div class="card-meta">2021–2024</div>
+              <div class="card-title">Houseperson / Guest Environmental Expert</div>
+              <div class="card-meta">Calgary Downtown Hotels 2021–2024</div>
             </div>
 
             <ul class="bullet-list card-body">
-              <li>Used task apps similar to ticketing systems.</li>
-              <li>Managed inventory & followed procedures.</li>
-              <li>Strong time management and reliability.</li>
+              <li>Held progressive responsibilities in Houseperson and environmental export roles, requiring strong communication skills. meticulous attention to detail, time management, and a commitment to excellence.</li>
+              <li>Utilized mobile apps (Zello and HotSOS) for real-time communication and task coordination, showing adaptability with digital tools and workflows.</li>
+              <li>Managed inventory levels and implemented efficient procedures for lines and other supplies.</li>
             </ul>
           </div>
 
