--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         <div class="hero-cta">
           <!-- TODO: Upload your resume PDF to GitHub (e.g., resume.pdf in repo root)
                then change href below to "resume.pdf" or the exact file name. -->
-          <a href="#" class="btn btn-primary">Download Resume</a>
+          <a href="Updated_Resume_portfolio.pdf" class="btn btn-primary">Download Resume</a>
           <a href="#projects" class="btn btn-outline">View Projects</a>
         </div>
 
@@ -841,3 +841,4 @@
   </script>
 </body>
 </html>
+
