--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
             <ul class="bullet-list card-body">
               <li>Land first IT Support / Helpdesk role.</li>
               <li>Continue homelab expansion.</li>
-              <li>Study for CompTIA A+.</li>
+              <li>Study for CompTIA+.</li>
             </ul>
           </div>
 
@@ -879,3 +879,4 @@
   </script>
 </body>
 </html>
+
