--- a/index.html
+++ b/index.html
@@ -446,6 +446,10 @@
         width: 100%;
         text-align: center;
       }
+      /*Taller modal on mobile*/
+      .modal-body {
+        height: 80vh;
+      }
     }
   </style>
 </head>
@@ -880,5 +884,6 @@
   </script>
 </body>
 </html>
+
 
 
