--- a/index.html
+++ b/index.html
@@ -498,6 +498,11 @@
           <span class="hero-tag">Microsoft 365</span>
           <span class="hero-tag">Networking</span>
           <span class="hero-tag">Customer Support</span>
+          <span class="hero-tag">Web Development</span>
+          <span class="hero-tag">Windows Adminstration</span>
+          <span class="hero-tag">Troubleshooting</span>
+          <span class="hero-tag">Problem Solving</span>
+          <span class="hero-tag">Hardware Diagnostics</span>
         </div>
 
         <div class="hero-cta">
@@ -884,6 +889,7 @@
   </script>
 </body>
 </html>
+
 
 
 
