--- a/index.html
+++ b/index.html
@@ -503,6 +503,7 @@
           <span class="hero-tag">Troubleshooting</span>
           <span class="hero-tag">Problem Solving</span>
           <span class="hero-tag">Hardware Diagnostics</span>
+          <span class="hero-tag">Active Directory Basics</span>
         </div>
 
         <div class="hero-cta">
@@ -889,6 +890,7 @@
   </script>
 </body>
 </html>
+
 
 
 
