--- a/index.html
+++ b/index.html
@@ -825,8 +825,9 @@
     <div class="modal-dialog" role="dialog" aria-modal="true" aria-labelledby="resumeModalTitle">
       <button class="modal-close" type="button" aria-label="Close resume viewer">&times;</button>
 
-      <h2 class="modal-title" id="resumeModalTitle">Resume – John Mark R. Gulmayo</h2>
-
+        <h2 class="modal-title" id="resumeModalTitle">Resume</h2>
+       
+      
       <div class="modal-body">
         <!-- Your PDF file must be in the same folder as index.html -->
         <iframe src="Updated_Resume_portfolio.pdf" title="Resume PDF Viewer"></iframe>
