--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     .fade-in {
       opacity: 0;
       transform: translateY(15px);
-      transition: 0.6s ease;
+      transition: 0.5s ease;
     }
 
     .fade-in.visible {
@@ -801,73 +801,73 @@
 
   <!-- SCRIPT: fade-in + modal + mobile behavior -->
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      /* ---- Fade-in on scroll (down & up) ---- */
-      const fadeEls = document.querySelectorAll(".fade-in");
+  document.addEventListener("DOMContentLoaded", () => {
+    /* ---- Fade-in on scroll (one-time, no twitch) ---- */
+    const fadeEls = document.querySelectorAll(".fade-in");
 
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add("visible");
-          } else {
-            entry.target.classList.remove("visible");
-          }
-        });
-      }, { threshold: 0.15 });
-
-      fadeEls.forEach(el => observer.observe(el));
-
-      /* ---- Resume modal behavior ---- */
-      const modal = document.getElementById("resumeModal");
-      const openBtn = document.getElementById("openResumeBtn");
-      const closeBtn = modal.querySelector(".modal-close");
-
-      function isMobile() {
-        return /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-      }
-
-      function openModal() {
-        modal.classList.add("is-open");
-        modal.setAttribute("aria-hidden", "false");
-        document.body.style.overflow = "hidden";
-      }
-
-      function closeModal() {
-        modal.classList.remove("is-open");
-        modal.setAttribute("aria-hidden", "true");
-        document.body.style.overflow = "";
-      }
-
-      function openResume() {
-        if (isMobile()) {
-          // On mobile, open PDF directly in new tab
-          window.open("Updated_Resume_portfolio.pdf", "_blank");
-        } else {
-          // On desktop, use the nice modal viewer
-          openModal();
-        }
-      }
-
-      if (openBtn) {
-        openBtn.addEventListener("click", openResume);
-      }
-
-      closeBtn.addEventListener("click", closeModal);
-
-      // Close on backdrop click
-      modal.addEventListener("click", (event) => {
-        if (event.target === modal) {
-          closeModal();
+    const observer = new IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("visible");
+          // once it's visible, stop watching it (prevents twitching)
+          obs.unobserve(entry.target);
         }
       });
+    }, { threshold: 0.15 });
 
-      // Close on Escape key
-      document.addEventListener("keydown", (event) => {
-        if (event.key === "Escape" && modal.classList.contains("is-open")) {
-          closeModal();
-        }
-      });
+    fadeEls.forEach(el => observer.observe(el));
+
+    /* ---- Resume modal behavior ---- */
+    const modal = document.getElementById("resumeModal");
+    const openBtn = document.getElementById("openResumeBtn");
+    const closeBtn = modal.querySelector(".modal-close");
+
+    function isMobile() {
+      return /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+    }
+
+    function openModal() {
+      modal.classList.add("is-open");
+      modal.setAttribute("aria-hidden", "false");
+      document.body.style.overflow = "hidden";
+    }
+
+    function closeModal() {
+      modal.classList.remove("is-open");
+      modal.setAttribute("aria-hidden", "true");
+      document.body.style.overflow = "";
+    }
+
+    function openResume() {
+      if (isMobile()) {
+        // On mobile, open PDF directly in new tab
+        window.open("Updated_Resume_portfolio.pdf", "_blank");
+      } else {
+        // On desktop, use the nice modal viewer
+        openModal();
+      }
+    }
+
+    if (openBtn) {
+      openBtn.addEventListener("click", openResume);
+    }
+
+    closeBtn.addEventListener("click", closeModal);
+
+    // Close on backdrop click
+    modal.addEventListener("click", (event) => {
+      if (event.target === modal) {
+        closeModal();
+      }
     });
-  </script>
+
+    // Close on Escape key
+    document.addEventListener("keydown", (event) => {
+      if (event.key === "Escape" && modal.classList.contains("is-open")) {
+        closeModal();
+      }
+    });
+  });
+</script>
 </body>
 </html>
