--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
           <span class="hero-tag">Customer Servce & Technical Support</span>
           <span class="hero-tag">GitHub & Web Dev</span>
           <span class="hero-tag">Enterprice WiFi Basics</span>
+          <span class="hero-tag">Google IT Support Professional Certificate</span>
           
         </div>
 
