--- a/index.html
+++ b/index.html
@@ -499,6 +499,12 @@
       <!-- Current Focus/Achievenments -->
       <div class="hero-side">
         <div class="info-card">
+         <div class="info-label">Recent Achievements</div>
+          <div class="info-main">Google IT Support Proffessional Certificate</div>
+      </div>
+      
+      <div class="hero-side">
+        <div class="info-card">
           <div class="info-label">Current Focus</div>
           <div class="info-main">Touching up portfolio & fundamentals</div>
           <div class="info-meta"></div>
@@ -523,11 +529,11 @@
           <div class="info-main">Compact Mini Server Rack</div>
           <div class="info-meta">Advanced Networking & System Admin</div>
         </div>
-
+    
         <div class="info-card">
           <div class="info-label">Future Plans</div>
           <div class="info-main">Industry IT Certifications</div>
-          <div class="info-meta">Google IT Support · CompTIA A+ · Network+ · CCNA</div>
+          <div class="info-meta">CompTIA A+ · Network+ · CCNA</div>
         </div>
       </div>
     </section>
