--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
       <div class="hero-side">
         <div class="info-card">
           <div class="info-label">Current Focus</div>
-          <div class="info-main">Touching up portfolio & fundamentals</div>
+          <div class="info-main">Studying and Preparing for CompTIA+ Certification</div>
           <div class="info-meta"></div>
         </div>
 
