--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
       <div class="hero-side">
         <div class="info-card">
          <div class="info-label">Recent Achievements</div>
-          <div class="info-main">Google IT Support Proffessional Certificate</div>
+          <div class="info-main">Google IT Support Professional Certificate</div>
       </div>
       
       <div class="hero-side">
