--- a/index.html
+++ b/index.html
@@ -728,8 +728,10 @@
             <div class="card-header">
               <div class="card-title">Education & Certifications</div>
             </div>
+            <!--Education & Certifications-->
             <ul class="bullet-list card-body">
               <li>High School Diploma – St. Mary’s High School.</li>
+              <li>Google IT Support Certificate</li>
               <li>First Aid & WHMIS Certified.</li>
               <li>Class 5 Driver’s License.</li>
             </ul>
