--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
         </section>
 
         <!-- PROJECTS -->
-        <section class="fade-in">
+        <section id="projects" class="fade-in">
               <h2 class="card-title">HomeLab Capabilities</h2>
               <p class="card-meta">Real-world IT operations simutaled at home.</p>
 
@@ -641,6 +641,7 @@
         <section id="projects" class="fade-in">
           <h2 class="section-title">Technical Projects</h2>
           <p class="section-subtitle">Hands-on projects demonstrating real IT experience.</p>
+        </section>
           
           <!-- Homelab -->
           <div class="card">
